# todoist_agent

./: deepseek.py  pyproject.toml  test_task_client.py  }
.github/workflows/: deploy.yml
Wear/: settings.gradle.kts
Wear/gradle/: libs.versions.toml
Wear/gradle/wrapper/: gradle-wrapper.properties
Wear/phone/: build.gradle.kts
Wear/wear/: build.gradle.kts
app/: .gitignore  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: ai_flow.dart  audio_recorder.dart  desktop_app.dart  logger.dart  main.dart  message_list_view.dart  second_screen.dart  standard_app.dart  status.dart  theme.dart  timer_service.dart  websocket_manager.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
core/: hello.go  hello_test.go
playground/: deepseek.py  prompt.md
server/: README.md  main.py  pyproject.toml  websocket.py
server/my_server/: main.py
todo_server/: pyproject.toml
todo_server/.github/workflows/: deploy.yml
todo_server/src/: ai_manager.py  code_manager.py  groq_manager.py  main.py  task_client.py  todoist_manager.py  tts_manager.py  websocket.py
todo_server/tests/: test_ai_manager.py  test_code_manager.py  test_groq_manager.py  test_task_client.py  test_todo_manager.py
wear/: README.md  pubspec.yaml
wear/android/app/: build.gradle.kts
wear/ios/Runner/: Info.plist
wear/ios/Runner.xcodeproj/: project.pbxproj
wear/lib/: main.dart
wear/linux/: CMakeLists.txt
wear/linux/runner/: my_application.cc
wear/macos/Runner.xcodeproj/: project.pbxproj
wear/windows/: CMakeLists.txt
wear/windows/runner/: Runner.rc  main.cpp
(+19 files in other folders)
