[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo_server"
version = "0.1.0"
description = "A simple FastAPI server."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" } # Optional: Add a LICENSE file if needed
authors = [
    { name = "Dmitrii Lipin", email = "your.email@example.com" }, # Replace with your details
]
dependencies = [
    "fastapi>=0.100.0", # Modern async web framework
    "uvicorn[standard]>=0.20.0", # ASGI server (includes performance extras)
]

[project.urls]
Homepage = "https://github.com/yourusername/yourproject" # Optional: Replace with your repo URL
Issues = "https://github.com/yourusername/yourproject/issues" # Optional: Replace with your repo URL

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
[tool.hatch.build.targets.wheel]
   packages = ["src/"]

# Optional: Add linters/formatters like Ruff
# [tool.ruff]
# line-length = 88
# select = ["E", "F", "W", "I", "UP", "PL", "T20"] # Example rule set
# ignore = []

# [tool.ruff.format]
# quote-style = "double"
